Completed Email sending

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -36,6 +36,20 @@ management:
 
 ---
 grails:
+    mail:
+        host: "smtp.gmail.com"
+        port: "465"
+        username: "tanmoy.blaze@gmail.com"
+        password: "yourpassword"
+        props:
+            mail.smtp.auth: "true"
+            mail.smtp.socketFactory.port: "465"
+            mail.smtp.socketFactory.class: "javax.net.ssl.SSLSocketFactory"
+            mail.smtp.socketFactory.fallback: "false"
+
+
+---
+grails:
     mime:
         disable:
             accept:
@@ -107,8 +121,8 @@ dataSource:
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: update
+            url: jdbc:h2:./dinnerDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
         dataSource:
             dbCreate: update
